<resources>
    <string name="app_name">YtuEv</string>
    <string name="email">E-posta</string>
    <string name="password">Şifre</string>
    <string name="ask_account">Hesabın yok mu?</string>
    <string name="register">Kaydol</string>
    <string name="login">Giriş Yap</string>
    <string name="name">İsim</string>
    <string name="surname">Soyisim</string>
    <string name="confirm_password">Şifreyi onayla</string>
    <string name="emptyLogin">E-posta ve şifre alanları boş olamaz</string>
    <string name="emailnotvalid">Lütfen std.yildiz.edu.tr uzantılı okul e-postanızı girin</string>
    <string name="required">*Zorunlu</string>
    <string name="password_problem">Girdiğiniz şifreler uyuşmuyor</string>
    <string name="successfulRegistration">Kayıt işlemi başarılı!</string>
    <string name="profil">Profil</string>
    <string name="anasayfa">Anasayfa\n</string>
    <string name="harita">Harita</string>
    <string name="ara">Ara</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="updateProfile">Profili Güncelle</string>
    <string name="profilBilgileri">Profil Bilgileri</string>
    <string name="country">Ülke</string>
    <string name="city">Şehir</string>
    <string name="iletisim">İletişim</string>
    <string name="numara">Telefon numarası</string>
    <string name="donem">Dönem</string>
    <string name="derece">Derece</string>
    <string name="egitim">Eğitim</string>
    <string name="is">İş</string>
    <string name="sosyal_medya">Sosyal Medya</string>
    <string name="cikis">Çıkış Yap</string>
    <string name="message">Bağlantı Kur</string>
    <string name="education">Eğitim</string>
    <string name="ytu">Yıldız Teknik Üniversitesi</string>
    <string name="connection">İletişim</string>
    <string name="contact">İletişim</string>
    <string name="ev">Tercihler</string>
    <string name="hakkinda">Hakkımda</string>
    <string name="duzenle">Profili Düzenle</string>
    <string name="ev_arama">Ev Arıyorum</string>
    <string name="ev_arkadas_arama">Ev arkadaşı arıyorum</string>
    <string name="dolu">Doluyum</string>
    <string name="bolum">Bölüm</string>
    <string name="sinif">Sınıf</string>
    <string name="tercih">Tercihler</string>
    <string name="mesafe">Maksimum Mesafe(km)</string>
    <string name="sure">Süre(ay)</string>
    <string name="save">Kaydet</string>
    <string name="durum">Arama Durumu</string>
    <string name="il">İl</string>
    <string name="ilce">İlçe</string>
    <string name="profili_gor">Profili Gör</string>
    <string name="ilanaGit">İlana Git</string>
    <string name="baslik">Başlık</string>
    <string name="aciklama">Açıklama</string>
    <string name="fiyat">Fiyat(TL)</string>
    <string name="konum">Adres</string>
    <string name="paylas">Paylaş</string>
    <string name="gelen_kutusu">Gelen Kutusu</string>
    <string name="ilan">İlan Detay</string>
    <string name="baglanti_kur">Bağlantı Kur</string>
</resources>