<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuProfil"
        android:icon="@drawable/person"
        android:title="@string/profil">

    </item>

    <item
        android:id="@+id/menuAnasayfa"
        android:icon="@drawable/home"
        android:title="@string/anasayfa">

    </item>
    <item
        android:id="@+id/menuHarita"
        android:icon="@drawable/harita"
        android:title="@string/harita">

    </item>
    <item
        android:id="@+id/menuAra"
        android:icon="@drawable/ara"
        android:title="@string/ara">

    </item>
    <item
        android:id="@+id/menuMesajlar"
        android:icon="@drawable/outline_notifications_24"
        android:title="@string/gelen_kutusu">

    </item>


</menu>