<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GirisActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/mailTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/email"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/email"
        app:endIconMode="clear_text"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:fontFamily="@font/wix_madefor">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/passwordTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/mailTextLayout"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/password"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/password"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            android:fontFamily="@font/wix_madefor">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/passwordTextLayout"
        app:layout_constraintStart_toStartOf="@id/passwordTextLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordTextLayout"
        android:layout_marginTop="5dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_account"
            android:textSize="17sp"
            android:fontFamily="@font/wix_madefor"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:fontFamily="@font/wix_madefor">
        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/passwordTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:cornerRadius="30dp"
        android:textAllCaps="false"
        android:text="@string/login"
        android:fontFamily="@font/wix_madefor"
        android:textColor="@color/black"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton">

    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>