<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.IlanEkleFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ilanFotograf"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:src="@drawable/add_image">

            </ImageView>
            <Button
                android:id="@+id/paylasButon"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:fontFamily="@font/wix_madefor"
                android:text="@string/paylas"
                android:textAllCaps="true"
                android:layout_marginTop="8dp"
                android:layout_marginStart="75dp"
                android:layout_gravity="center"
                style="@style/Widget.Material3.Button.OutlinedButton"/>
        </LinearLayout>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:iconifiedByDefault="false"
                    android:queryHint="@string/konum"
                    android:singleLine="true" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <fragment
                    android:id="@+id/mapIlan"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ListView
                    android:id="@+id/adreslistView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="200dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>



        </com.google.android.material.card.MaterialCardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ilan"
                        android:fontFamily="@font/wix_madefor"
                        android:layout_margin="8dp"
                        android:textSize="18sp"
                        app:drawableStartCompat="@drawable/outline_info_24"
                        android:drawablePadding="4dp">

                    </TextView>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/fiyatTextField"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/fiyat"
                            tools:text="1+1 ev"
                            android:layout_margin="8dp"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/ilanFiyat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:fontFamily="@font/wix_madefor"/>

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/sureTextField"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/sure"
                            tools:text="1+1 ev"
                            android:layout_margin="8dp"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/ilanSure"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:maxLength="50"
                                android:maxLines="1"
                                android:fontFamily="@font/wix_madefor"/>

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/baslikTextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/baslik"
                        android:layout_margin="8dp"
                        tools:text="1+1 ev">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ilanBaslik"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:fontFamily="@font/wix_madefor"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/ilTextField"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/il"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            tools:text="1+1 ev"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/ilanIl"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:maxLength="50"
                                android:maxLines="1"
                                android:fontFamily="@font/wix_madefor"/>

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/ilceTextField"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/ilce"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            tools:text="1+1 ev"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/ilanIlce"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:maxLength="50"
                                android:maxLines="1"
                                android:fontFamily="@font/wix_madefor"/>

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/aciklamaTextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/aciklama"
                        android:layout_margin="8dp"
                        tools:text="1+1 ev"
                        app:counterEnabled="true"
                        app:counterMaxLength="500">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ilanAciklama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLength="500"
                            android:maxLines="4"
                            android:fontFamily="@font/wix_madefor"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </ScrollView>



    </LinearLayout>
</FrameLayout>