<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/kaydolText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/wix_madefor"/>

    <ImageView
        android:id="@+id/geriButon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/kaydolText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/kaydolText"
        android:layout_marginStart="30dp"
        android:src="@drawable/back"
        android:fontFamily="@font/wix_madefor">
    </ImageView>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/nameTextLayout"
        app:layout_constraintTop_toBottomOf="@id/kaydolText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/name"
        app:helperTextTextColor="@color/red"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/person"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        android:fontFamily="@font/wix_madefor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:fontFamily="@font/wix_madefor">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/mailTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameTextLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/email"
        app:helperTextTextColor="@color/red"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/email"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mailEditText"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            android:fontFamily="@font/wix_madefor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/passwordTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mailTextLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/password"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/password"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp">


        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            android:fontFamily="@font/wix_madefor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/passwordConfirmTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordTextLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/confirm_password"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/password"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp">


        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/passwordConfirmEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            android:fontFamily="@font/wix_madefor"/>
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/passwordConfirmTextLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register"
        android:gravity="center"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:fontFamily="@font/wix_madefor">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>